Zero warning baseline: clean all Error Prone/javac WARN, enforce -Werror
Baseline 321 -> 0 across main+test sources. Mechanical classes fixed via
EP patch mode (~116 sites), semantic classes reviewed individually:
- JavaTimeDefaultTimeZone: explicit ZoneId.systemDefault() everywhere
- StringSplitter: reverted 3 sites where JDK split() tail-trimming
  differs from Guava Splitter (ClientVersion, OfflineIpRegionUtil,
  MAuthSpi) — suppressed with reasons
- ReferenceEquality/EqualsGetClass/ImmutableEnumChecker/MixedMutability:
  fixed or suppressed per-site
- Javadoc: 55 class summaries added, empty block tags filled/removed;
  field-level {@code}/{@link} switched to <code> HTML (EP
  UnrecognisedJavadocTag mis-parses inline tags on field javadocs)
- Dead code: WebConfig.extendMessageConverters removed (converter bean
  already auto-registered); unused imports/methods pruned

-Werror now fails compilation on ANY javac/EP warning regression.